tests/ui/specialization/const_trait_impl.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:34:9
   |
LL | impl<T: ~const Default> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:40:9
   |
LL | impl<T: ~const Default + ~const Sup> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:46:9
   |
LL | impl<T: ~const Default + ~const Sub> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:40:9
   |
LL | impl<T: ~const Default + ~const Sup> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:34:9
   |
LL | impl<T: ~const Default> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:46:9
   |
LL | impl<T: ~const Default + ~const Sub> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const fn `<() as A>::a` in constants
  --> $DIR/const_trait_impl.rs:52:23
   |
LL | const _: () = assert!(<()>::a() == 42);
   |                       ^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error[E0015]: cannot call non-const fn `<u8 as A>::a` in constants
  --> $DIR/const_trait_impl.rs:53:23
   |
LL | const _: () = assert!(<u8>::a() == 3);
   |                       ^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error[E0015]: cannot call non-const fn `<u16 as A>::a` in constants
  --> $DIR/const_trait_impl.rs:54:23
   |
LL | const _: () = assert!(<u16>::a() == 2);
   |                       ^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error[E0015]: cannot call non-const fn `<T as Sup>::foo` in constant functions
  --> $DIR/const_trait_impl.rs:48:9
   |
LL |         T::foo()
   |         ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0015`.
